[package]
name = "crosstui"
description = "Solve crossword puzzles in your terminal"
license = "AGPL-3.0-only"
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
crossword = { path = "../crossword", version = "0.2.0" }
dirs = "6"
ratatui = "0.30.0-alpha"
ratatui-macros = "0.7.0-alpha"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
